# one1one

./: .gitignore  .replit  DEPLOYMENT-INSTRUCTIONS.md  README.md  WHEEL-BUILD-FIX.md  app.py  deploy-requirements.txt  docker-requirements.txt  fix-wheel-errors.py  install-dependencies.sh  pyproject.toml  render.yaml  render_requirements.txt  replit.md  requirements-full.txt  requirements_export.txt  setup-environment.py  vercel.json  verify-no-wheel-errors.py
frontend_app/: DEPLOYMENT-GUIDE.md  README.md  android-setup.md  app.js  backend-server.py  capacitor.config.json  index.html  manifest.json  package.json  style.css  sw.js
static/css/: style.css
static/js/: app.js
templates/: index.html
